fix doc build errors

--- a/docs/legacy/redirects.asciidoc
+++ b/docs/legacy/redirects.asciidoc
@@ -30,134 +30,134 @@ This page has moved. Please see {apm-guide-ref}/data-model.html[APM data model].
 [role="exclude",id="error-endpoint"]
 === Error endpoint
 
-The error endpoint has been deprecated. Instead, see <<events-api>>.
+The error endpoint has been deprecated. Instead, see <<api-events>>.
 
 [role="exclude",id="error-schema-definition"]
 === Error schema definition
 
-The error schema has moved. Please see <<error-schema>>.
+The error schema has moved. Please see <<api-error-schema>>.
 
 [role="exclude",id="error-api-examples"]
 === Error API examples
 
-The error API examples have moved. Please see <<events-api>>.
+The error API examples have moved. Please see <<api-events>>.
 
 [role="exclude",id="error-payload-schema"]
 === Error payload schema
 
-This schema has changed. Please see <<error-api>>.
+This schema has changed. Please see <<api-error>>.
 
 [role="exclude",id="error-service-schema"]
 === Error service schema
 
-This schema has changed. Please see <<error-api>>.
+This schema has changed. Please see <<api-error>>.
 
 [role="exclude",id="error-system-schema"]
 === Error system schema
 
-This schema has changed. Please see <<error-api>>.
+This schema has changed. Please see <<api-error>>.
 
 [role="exclude",id="error-context-schema"]
 === Error context schema
 
-This schema has changed. Please see <<error-api>>.
+This schema has changed. Please see <<api-error>>.
 
 [role="exclude",id="error-stacktraceframe-schema"]
 === Error stack trace frame schema
 
-This schema has changed. Please see <<error-api>>.
+This schema has changed. Please see <<api-error>>.
 
 [role="exclude",id="payload-with-error"]
 === Payload with error
 
-This is no longer helpful. Please see <<error-api>>.
+This is no longer helpful. Please see <<api-error>>.
 
 [role="exclude",id="payload-with-minimal-exception"]
 === Payload with minimal exception
 
-This is no longer helpful. Please see <<error-api>>.
+This is no longer helpful. Please see <<api-error>>.
 
 [role="exclude",id="payload-with-minimal-log"]
 === Payload with minimal log
 
-This is no longer helpful. Please see <<error-api>>.
+This is no longer helpful. Please see <<api-error>>.
 
 // Transaction API
 
 [role="exclude",id="transaction-endpoint"]
 === Transaction endpoint
 
-The transaction endpoint has been deprecated. Instead, see <<events-api>>.
+The transaction endpoint has been deprecated. Instead, see <<api-events>>.
 
 [role="exclude",id="transaction-schema-definition"]
 === Transaction schema definition
 
-The transaction schema has moved. Please see <<transaction-schema>>.
+The transaction schema has moved. Please see <<api-transaction-schema>>.
 
 [role="exclude",id="transaction-api-examples"]
 === Transaction API examples
 
-The transaction API examples have moved. Please see <<events-api>>.
+The transaction API examples have moved. Please see <<api-events>>.
 
 [role="exclude",id="transaction-span-schema"]
 === Transaction span schema
 
-This schema has changed. Please see <<span-api>>.
+This schema has changed. Please see <<api-span>>.
 
 [role="exclude",id="transaction-payload-schema"]
 === Transaction payload schema
 
-This schema has changed. Please see <<transaction-api>>.
+This schema has changed. Please see <<api-transaction>>.
 
 [role="exclude",id="transaction-service-schema"]
 === Transaction service schema
 
-This schema has changed. Please see <<transaction-api>>.
+This schema has changed. Please see <<api-transaction>>.
 
 [role="exclude",id="transaction-system-schema"]
 === Transaction system schema
 
-This schema has changed. Please see <<transaction-api>>.
+This schema has changed. Please see <<api-transaction>>.
 
 [role="exclude",id="transaction-context-schema"]
 === Transaction context schema
 
-This schema has changed. Please see <<transaction-api>>.
+This schema has changed. Please see <<api-transaction>>.
 
 [role="exclude",id="transaction-stacktraceframe-schema"]
 === Transaction stack trace frame schema
 
-This schema has changed. Please see <<transaction-api>>.
+This schema has changed. Please see <<api-transaction>>.
 
 [role="exclude",id="transaction-request-schema"]
 === Transaction request schema
 
-This schema has changed. Please see <<transaction-api>>.
+This schema has changed. Please see <<api-transaction>>.
 
 [role="exclude",id="transaction-user-schema"]
 === Transaction user schema
 
-This schema has changed. Please see <<transaction-api>>.
+This schema has changed. Please see <<api-transaction>>.
 
 [role="exclude",id="payload-with-transactions"]
 === Payload with transactions
 
-This is no longer helpful. Please see <<transaction-api>>.
+This is no longer helpful. Please see <<api-transaction>>.
 
 [role="exclude",id="payload-with-minimal-transaction"]
 === Payload with minimal transaction
 
-This is no longer helpful. Please see <<transaction-api>>.
+This is no longer helpful. Please see <<api-transaction>>.
 
 [role="exclude",id="payload-with-minimal-span"]
 === Payload with minimal span
 
-This is no longer helpful. Please see <<span-api>>.
+This is no longer helpful. Please see <<api-span>>.
 
 [role="exclude",id="example-intakev2-events"]
 === Example Request Body
 
-This page has moved. Please see <<example-intake-events>>.
+This page has moved. Please see <<api-event-example>>.
 
 // V1 intake API
 
