--- a/docs/legacy/redirects.asciidoc
+++ b/docs/legacy/redirects.asciidoc
@@ -277,3 +277,52 @@ This section has moved. See {apm-lambda-ref}/aws-lambda-config-options.html[Conf
 === Using AWS Secrets Manager to manage APM authentication keys
 
 This section has moved. See {apm-lambda-ref}/aws-lambda-secrets-manager.html[Using AWS Secrets Manager to manage APM authentication keys].
+
+[role="exclude",id="go-compatibility"]
+=== Go Agent Compatibility
+
+This page has moved. Please see <<agent-server-compatibility>>.
+
+[role="exclude",id="java-compatibility"]
+=== Java Agent Compatibility
+
+This page has moved. Please see <<agent-server-compatibility>>.
+
+[role="exclude",id="dotnet-compatibility"]
+=== .NET Agent Compatibility
+
+This page has moved. Please see <<agent-server-compatibility>>.
+
+[role="exclude",id="nodejs-compatibility"]
+=== Node.js Agent Compatibility
+
+This page has moved. Please see <<agent-server-compatibility>>.
+
+[role="exclude",id="python-compatibility"]
+=== Python Agent Compatibility
+
+This page has moved. Please see <<agent-server-compatibility>>.
+
+[role="exclude",id="ruby-compatibility"]
+=== Ruby Agent Compatibility
+
+This page has moved. Please see <<agent-server-compatibility>>.
+
+[role="exclude",id="rum-compatibility"]
+=== RUM Agent Compatibility
+
+This page has moved. Please see <<agent-server-compatibility>>.
+
+[role="exclude",id="apm-release-notes"]
+=== APM release highlights
+
+This page has moved.
+Please see {observability-guide}/whats-new.html[What's new in {observability} {minor-version}].
+
+Please see <<whats-new>>.
+
+[role="exclude",id="whats-new"]
+=== What's new in APM {minor-version}
+
+This page has moved.
+Please see {observability-guide}/whats-new.html[What's new in {observability} {minor-version}].
