docs: update configuration-process.asciidoc

--- a/docs/legacy/configuration-process.asciidoc
+++ b/docs/legacy/configuration-process.asciidoc
@@ -140,7 +140,7 @@ Enables self instrumentation of the APM Server itself.
 Disabled by default.
 
 [float]
-[[configuration-other]]
+[[configuration-tbs]]
 === Configuration options: tail-based sampling
 
 [[sampling.tail.enabled]]
