--- a/docs/integrations-index.asciidoc
+++ b/docs/integrations-index.asciidoc
@@ -76,6 +76,8 @@ include::manage-storage.asciidoc[]
 
 include::input-apm.asciidoc[]
 
+include::configure/index.asciidoc[leveloffset=+1]
+
 include::secure-agent-communication.asciidoc[]
 
 include::api.asciidoc[]
@@ -130,7 +132,7 @@ include::./legacy/setting-up-and-running.asciidoc[]
 // TODO: This section needs to integrate above
 include::./legacy/data-ingestion.asciidoc[]
 
-:beat-specific-output-config: {docdir}/legacy/configuring-output-after.asciidoc
+// :beat-specific-output-config: {docdir}/legacy/configuring-output-after.asciidoc
 include::./legacy/configuring.asciidoc[leveloffset=+1]
 
 :beat-specific-security: {docdir}/legacy/security.asciidoc
