--- a/docs/configure/general.asciidoc
+++ b/docs/configure/general.asciidoc
@@ -1,4 +1,5 @@
-= General
+[[configuration-process]]
+= General configuration options
 
 General APM Server configuration options.
 
@@ -36,8 +37,7 @@ Maximum permitted size of a request's header accepted by the server to be proces
 
 
 
-[[configuration-process]]
-== General configuration options
+
 
 Example config file:
 
@@ -69,64 +69,64 @@ output.elasticsearch:
 
 [float]
 [[configuration-apm-server]]
-=== Configuration options: `apm-server.*`
+== Configuration options: `apm-server.*`
 
 [[host]]
 [float]
-==== `host`
+=== `host`
 Defines the host and port the server is listening on.
 Use `"unix:/path/to.sock"` to listen on a Unix domain socket.
 Defaults to 'localhost:8200'.
 
 [[max_header_size]]
 [float]
-==== `max_header_size`
+=== `max_header_size`
 Maximum permitted size of a request's header accepted by the server to be processed (in Bytes).
 Defaults to 1048576 Bytes (1 MB).
 
 [[idle_timeout]]
 [float]
-==== `idle_timeout`
+=== `idle_timeout`
 Maximum amount of time to wait for the next incoming request before underlying connection is closed.
 Defaults to 45 seconds.
 
 [[read_timeout]]
 [float]
-==== `read_timeout`
+=== `read_timeout`
 Maximum permitted duration for reading an entire request.
 Defaults to 30 seconds.
 
 [[write_timeout]]
 [float]
-==== `write_timeout`
+=== `write_timeout`
 Maximum permitted duration for writing a response.
 Defaults to 30 seconds.
 
 [[shutdown_timeout]]
 [float]
-==== `shutdown_timeout`
+=== `shutdown_timeout`
 Maximum duration in seconds before releasing resources when shutting down the server.
 Defaults to 5 seconds.
 
 [[max_event_size]]
 [float]
-==== `max_event_size`
+=== `max_event_size`
 Maximum permitted size of an event accepted by the server to be processed (in Bytes).
 Defaults to 307200 Bytes.
 
 [float]
 [[configuration-other]]
-=== Configuration options: general
+== Configuration options: general
 
 [[max_connections]]
 [float]
-==== `max_connections`
+=== `max_connections`
 Maximum number of TCP connections to accept simultaneously.
 Default value is 0, which means _unlimited_.
 
 [[config-secret-token]]
 [float]
-==== `auth.secret_token`
+=== `auth.secret_token`
 Authorization token for sending data to the APM server.
 If a token is set, the agents must send it in the following format:
 Authorization: Bearer <secret-token>.
@@ -137,7 +137,7 @@ Read more about <<securing-apm-server, Securing APM Server>> and the <<secret-to
 
 [[config-secret-token-legacy]]
 [float]
-==== `secret_token`
+=== `secret_token`
 
 deprecated::[7.14.0, Replaced by `auth.secret_token`. See <<config-secret-token>>]
 
@@ -146,70 +146,70 @@ The old configuration will continue to work until 8.0.0, and the new configurati
 
 [[capture_personal_data]]
 [float]
-==== `capture_personal_data`
+=== `capture_personal_data`
 If true,
 APM Server captures the IP of the instrumented service and its User Agent if any.
 Enabled by default.
 
 [[default_service_environment]]
 [float]
-==== `default_service_environment`
+=== `default_service_environment`
 Sets the default service environment to associate with data and requests received from agents which have no service environment defined.
 
 [[expvar.enabled]]
 [float]
-==== `expvar.enabled`
+=== `expvar.enabled`
 When set to true APM Server exposes https://golang.org/pkg/expvar/[golang expvar].
 Disabled by default.
 
 [[expvar.url]]
 [float]
-==== `expvar.url`
+=== `expvar.url`
 Configure the URL to expose expvar.
 Defaults to `debug/vars`.
 
 [[instrumentation.enabled]]
 [float]
-==== `instrumentation.enabled`
+=== `instrumentation.enabled`
 Enables self instrumentation of the APM Server itself.
 Disabled by default.
 
 [float]
 [[configuration-tbs]]
-=== Configuration options: tail-based sampling
+== Configuration options: tail-based sampling
 
 [[sampling.tail.enabled]]
 [float]
-==== `sampling.tail.enabled`
+=== `sampling.tail.enabled`
 Set to `true` to enable tail based sampling.
 Disabled by default.
 
 [[sampling.tail.interval]]
 [float]
-==== `sampling.tail.interval`
+=== `sampling.tail.interval`
 Synchronization interval for multiple APM Servers.
 Should be in the order of tens of seconds or low minutes.
 
 [[sampling.tail.policies]]
 [float]
-==== `sampling.tail.policies`
+=== `sampling.tail.policies`
 Criteria used to match a root transaction to a sample rate.
 
 [float]
-=== Configuration options: `max_procs`
+== Configuration options: `max_procs`
 
 [[max_procs]]
 [float]
-==== `max_procs`
+=== `max_procs`
 Sets the maximum number of CPUs that can be executing simultaneously.
 The default is the number of logical CPUs available in the system.
 
 [float]
-=== Configuration options: `data_streams`
+== Configuration options: `data_streams`
 
 [[data_streams.wait_for_integration]]
 [float]
-==== `wait_for_integration`
+=== `wait_for_integration`
 Wait for the `apm` {fleet} integration to be installed by {kib}. Requires either <<kibana-enabled>>
 or for the <<elasticsearch-output, {es} output>> to be configured.
 Defaults to true.
