--- a/docs/configure/outputs/kafka.asciidoc
+++ b/docs/configure/outputs/kafka.asciidoc
@@ -35,7 +35,7 @@ ifdef::apm-server[]
 [float]
 === Configure the {kib} output
 
-include::../../../../shared-kibana-endpoint.asciidoc[tag=shared-kibana-config]
+include::../../shared-kibana-endpoint.asciidoc[tag=shared-kibana-config]
 endif::[]
 
 [[kafka-compatibility]]
