--- a/docs/configure/outputs/logstash.asciidoc
+++ b/docs/configure/outputs/logstash.asciidoc
@@ -41,7 +41,7 @@ ifdef::apm-server[]
 [float]
 === Configure the {kib} output
 
-include::../../../../shared-kibana-endpoint.asciidoc[tag=shared-kibana-config]
+include::../../shared-kibana-endpoint.asciidoc[tag=shared-kibana-config]
 endif::[]
 
 ifeval::["{beatname_lc}"=="filebeat"]
