--- a/docs/configure/outputs/redis.asciidoc
+++ b/docs/configure/outputs/redis.asciidoc
@@ -28,7 +28,7 @@ ifdef::apm-server[]
 [float]
 === Configure the {kib} output
 
-include::../../../../shared-kibana-endpoint.asciidoc[tag=shared-kibana-config]
+include::../../shared-kibana-endpoint.asciidoc[tag=shared-kibana-config]
 endif::[]
 
 === Compatibility
