--- a/docs/configure/path.asciidoc
+++ b/docs/configure/path.asciidoc
@@ -1,22 +1,5 @@
-= Path
-
-Path configuration options.
-
-
-//////////////////////////////////////////////////////////////////////////
-//// This content is shared by all Elastic Beats. Make sure you keep the
-//// descriptions here generic enough to work for all Beats that include
-//// this file. When using cross references, make sure that the cross
-//// references resolve correctly for any files that include this one.
-//// Use the appropriate variables defined in the index.asciidoc file to
-//// resolve Beat names: beatname_uc and beatname_lc.
-//// Use the following include to pull this content into a doc file:
-//// include::../../libbeat/docs/shared-path-config.asciidoc[]
-//// Make sure this content appears below a level 2 heading.
-//////////////////////////////////////////////////////////////////////////
-
 [[configuration-path]]
-== Configure project paths
+= Configure project paths
 
 ++++
 <titleabbrev>Project paths</titleabbrev>
@@ -45,12 +28,12 @@ path.logs: /var/log/
 Note that it is possible to override these options by using command line flags.
 
 [float]
-=== Configuration options
+== Configuration options
 
 You can specify the following options in the `path` section of the +{beatname_lc}.yml+ config file:
 
 [float]
-==== `home`
+=== `home`
 
 The home path for the {beatname_uc} installation. This is the default base path for all
 other path settings and for miscellaneous files that come with the distribution (for example, the
@@ -65,7 +48,7 @@ path.home: /usr/share/beats
 ------------------------------------------------------------------------------
 
 [float]
-==== `config`
+=== `config`
 
 The configuration path for the {beatname_uc} installation. This is the default base path
 for configuration files, including the main YAML configuration file and the
@@ -80,7 +63,7 @@ path.config: /usr/share/beats/config
 ------------------------------------------------------------------------------
 
 [float]
-==== `data`
+=== `data`
 
 The data path for the {beatname_uc} installation. This is the default base path for all
 the files in which {beatname_uc} needs to store its data. If not set by a CLI
@@ -99,7 +82,7 @@ TIP: When running multiple {beatname_uc} instances on the same host, make sure t
 each have a distinct `path.data` value.
 
 [float]
-==== `logs`
+=== `logs`
 
 The logs path for a {beatname_uc} installation. This is the default location for {beatname_uc}'s
 log files. If not set by a CLI flag or in the configuration file, the default
@@ -113,7 +96,7 @@ path.logs: /var/log/beats
 ------------------------------------------------------------------------------
 
 [float]
-==== `system.hostfs`
+=== `system.hostfs`
 
 Specifies the mount point of the host's file system for use in monitoring a host.
 This can either be set in the config, or with the `--system.hostfs` CLI flag. This is used for cgroup self-monitoring.
