--- a/docs/configure/tls.asciidoc
+++ b/docs/configure/tls.asciidoc
@@ -1,5 +1,19 @@
-= TLS
+[[configuration-ssl-landing]]
+= SSL/TLS settings
 
 TLS configuration options.
 
 include::./tab-widgets/tls-config-widget.asciidoc[]
+
+SSL/TLS is available for:
+
+* <<agent-server-ssl,APM Server **inputs**>> (APM Agents)
+* <<configuration-ssl,APM Server **outputs**>> that support SSL, like {es}, {ls}, or Kafka.
+
+Additional information on getting started with SSL/TLS is available in <<securing-apm-server>>.
+
+// :leveloffset: +2
+include::{libbeat-dir}/shared-ssl-config.asciidoc[]
+// :leveloffset: -2
+
+include::../legacy/ssl-input-settings.asciidoc[leveloffset=-1]
