--- a/docs/configure/instrumentation.asciidoc
+++ b/docs/configure/instrumentation.asciidoc
@@ -43,19 +43,19 @@ Environments can be filtered in the {kibana-ref}/xpack-apm.html[{apm-app}].
 [float]
 === `hosts`
 
-The {apm-server-ref-v}/getting-started-apm-server.html[APM Server] hosts to report instrumentation data to.
+The {apm-guide-ref}/getting-started-apm-server.html[APM Server] hosts to report instrumentation data to.
 Defaults to `http://localhost:8200`.
 
 [float]
 === `api_key`
 
-{apm-server-ref-v}/api-key.html[API key] used to secure communication with the APM Server(s).
+{apm-guide-ref}/api-key.html[API key] used to secure communication with the APM Server(s).
 If `api_key` is set then `secret_token` will be ignored.
 
 [float]
 === `secret_token`
 
-{apm-server-ref-v}/secret-token.html[Secret token] used to secure communication with the APM Server(s).
+{apm-guide-ref}/secret-token.html[Secret token] used to secure communication with the APM Server(s).
 
 [float]
 === `profiling.cpu.enabled`
