--- a/docs/apm-quick-start.asciidoc
+++ b/docs/apm-quick-start.asciidoc
@@ -1,9 +1,23 @@
 [[apm-quick-start]]
-== Quick start
+== Quick start with {ecloud}
 
-// * Point to EA APT/YUM
-// * Point to EA for running on Docker
-// * Point to EA for directory layout
-// * Point to EA for systemd
+The easiest way to get started with Elastic APM is by using our
+{ess-product}[hosted {es} Service] on {ecloud}.
+The {es} Service is available on AWS, GCP, and Azure.
+The {es} Service provisions the following components of the {stack}:
+
+* *{es}* -- A highly scalable free and open full-text search and analytics engine.
+* *{kib}* -- An analytics and visualization platform designed to work with {es}.
+* *Integrations Server* -- A combined *APM Server* and *Fleet-managed {agent}*.
+** *APM Server* -- An application that receives, processes, and validates performance data from your APM agents.
+** *Fleet-managed {agent}* -- A server that runs Fleet Server and provides a control plane for easily configuring and updating APM and other integrations.
+
+Don't worry--in order to get started,
+you don't need to understand how all of these pieces work together!
+When you use our hosted {es} Service,
+simply spin-up your instance and point your *APM agents* towards it.
+
+[float]
+== What will I learn in this guide?
 
 include::{obs-repo-dir}/observability/ingest-traces.asciidoc[tag=apm-quick-start]
