--- a/docs/legacy/copied-from-beats/docs/shared-docker.asciidoc
+++ b/docs/legacy/copied-from-beats/docs/shared-docker.asciidoc
@@ -1,5 +1,5 @@
 [[running-on-docker]]
-=== Run {beatname_uc} on Docker
+==== Run {beatname_uc} on Docker
 
 Docker images for {beatname_uc} are available from the Elastic Docker
 registry. The base image is https://hub.docker.com/_/centos/[centos:7].
@@ -15,7 +15,7 @@ https://www.elastic.co/subscriptions[Subscriptions] page for information about
 Elastic license levels.
 
 [float]
-==== Pull the image
+===== Pull the image
 
 Obtaining {beatname_uc} for Docker is as simple as issuing a +docker pull+ command
 against the Elastic Docker registry.
@@ -39,7 +39,7 @@ endif::[]
 ifndef::apm-server[]
 
 [float]
-==== Run the {beatname_uc} setup
+===== Run the {beatname_uc} setup
 
 Running {beatname_uc} with the setup command will create the index pattern and
 load visualizations
@@ -125,7 +125,7 @@ using this syntax:
 endif::apm-server[]
 
 [float]
-==== Configure {beatname_uc} on Docker
+===== Configure {beatname_uc} on Docker
 
 The Docker image provides several methods for configuring {beatname_uc}. The
 conventional approach is to provide a configuration file via a volume mount, but
@@ -133,7 +133,7 @@ it's also possible to create a custom image with your
 configuration included.
 
 [float]
-===== Example configuration file
+====== Example configuration file
 
 Download this example configuration file as a starting point:
 
@@ -143,7 +143,7 @@ curl -L -O {dockerconfig}
 ------------------------------------------------
 
 [float]
-===== Volume-mounted configuration
+====== Volume-mounted configuration
 
 One way to configure {beatname_uc} on Docker is to provide +{beatname_lc}.docker.yml+ via a volume mount.
 With +docker run+, the volume mount can be specified like this.
@@ -261,7 +261,7 @@ the `-E output.elasticsearch.hosts` line with the Cloud ID and elastic password
 using the syntax shown earlier.
 
 [float]
-===== Customize your configuration
+====== Customize your configuration
 
 ifdef::has_docker_label_ex[]
 The +{beatname_lc}.docker.yml+ file you downloaded earlier is configured to deploy {beats} modules based on the Docker labels applied to your containers.  See <<configuration-autodiscover-hints>> for more details. Add labels to your application Docker containers, and they will be picked up by the {beats} autodiscover feature when they are deployed.  Here is an example command for an Apache HTTP Server container with labels to configure the {filebeat} and {metricbeat} modules for the Apache HTTP Server:
@@ -287,7 +287,7 @@ The +{beatname_lc}.docker.yml+ downloaded earlier should be customized for your 
 endif::[]
 
 [float]
-===== Custom image configuration
+====== Custom image configuration
 
 It's possible to embed your {beatname_uc} configuration in a custom image.
 Here is an example Dockerfile to achieve this:
