--- a/docs/legacy/getting-started-apm-server.asciidoc
+++ b/docs/legacy/getting-started-apm-server.asciidoc
@@ -1,34 +1,157 @@
 [[getting-started-apm-server]]
-== Getting started with APM Server
+== Get started with APM Server (self managed)
 
 ++++
-<titleabbrev>Get started</titleabbrev>
+<titleabbrev>Get started (Self managed)</titleabbrev>
 ++++
 
+TIP: The easiest way to get started with Elastic APM is by using our
+{ess-product}[hosted {es} Service] on {ecloud}.
+The {es} Service is available on AWS, GCP, and Azure.
+See <<apm-quick-start>> to get started in minutes.
+
+// TODO: MOVE THIS
 IMPORTANT: Starting in version 8.0.0, {fleet} uses the APM integration to set up and manage APM index templates,
 {ilm-init} policies, and ingest pipelines. APM Server will only send data to {es} _after_ the APM integration has been installed.
 
-The easiest way to get started with Elastic APM is by using our
-{ess-product}[hosted {es} Service] on {ecloud}.
-The {es} Service is available on AWS, GCP, and Azure,
-and automatically configures APM Server to work with {es} and {kib}.
+The APM Server binary receives performance data from your APM agents,
+validates and processes it, and then transforms the data into {es} documents.
+If you're on this page, then you've chosen to self-manage the Elastic Stack,
+and you now must decide how to run and configure the APM Server.
+There are two options, and the components required are different for each:
+
+* **<<setup-apm-server-binary,APM Server binary>>**
+* **<<setup-fleet-managed-apm,Fleet-managed APM Server>>**
+// * **<<setup-apm-server-ea,Standalone Elastic Agent-managed APM Server>>**
 
 [float]
-=== Hosted {es} Service
+[[setup-apm-server-binary]]
+=== APM Server binary
 
-Skip managing your own {es}, {kib}, and APM Server by using our
-{ess-product}[hosted {es} Service] on
-{ecloud}.
+Install, configure, and run the APM Server binary wherever you need it.
+Depending on your use-case, APM Server can be run centrally or on edge machines.
 
-image::images/apm-architecture-cloud.png[Install Elastic APM on cloud]
+image::./images/bin-ov.png[APM Server binary overview]
 
-{ess-trial}[Try out the {es} Service for free],
-then see {cloud}/ec-manage-apm-settings.html[Add APM user settings] for information on how to configure Elastic APM.
+**Pros**:
+
+- Simplest self-managed option
+- No addition component knowledge required
+- YAML configuration simplifies automation
+
+**Supported outputs**:
+
+- {es}
+- {ess}
+- {ls}
+- Kafka
+- Redis
+- File
+- Console
+
+**Required components**:
+
+- APM agents
+- APM Server
+- {stack}
+
+**Configuration method**: YAML
 
 [float]
-=== Install and manage the stack yourself
+[[setup-fleet-managed-apm]]
+=== Fleet-managed APM Server
 
-If you'd rather install the stack yourself, first see the https://www.elastic.co/support/matrix[Elastic Support Matrix] for information about supported operating systems and product compatibility.
+Fleet is a web-based UI in {kib} that is used to centrally manage {agent}s.
+In this deployment model, use {agent} to spin up APM Server instances that can be centrally-managed in a custom-curated user interface.
+
+NOTE: Fleet-managed APM Server does not have full feature parity with the APM Server binary method of running Elastic APM.
+
+image::./images/fm-ov.png[APM Server fleet overview]
+
+// (outputs, stable APIs)
+// not the best option for a simple test setup or if only interested in centrally running APM Server
+
+**Pros**:
+
+- Conveniently manage one, some, or many different integrations from one central {fleet} UI.
+
+**Supported outputs**:
+
+- {es}
+- {ess}
+
+**Required components**:
+
+- APM agents
+- APM Server
+- {agent}
+- Fleet Server
+- {stack}
+
+**Configuration method**: {kib} UI
+
+// [float]
+// [[setup-apm-server-ea]]
+// === Standalone Elastic Agent-managed APM Server
+// // I really don't know how to sell this option
+// Instead of installing and configuring the APM Server binary, let {agent} orchestrate it for you.
+// Install {agent} and manually configure the agent locally on the system where it's installed.
+// You are responsible for managing and upgrading {agent}. This approach is recommended for advanced users only.
+
+// **Pros**:
+
+// - Easily add integrations for other data sources
+// useful if EA already in place for other integrations, and customers want to customize setup rather than using Fleet for configuration
+// // TODO:
+// // maybe get some more hints on this one from the EA team to align with highlighting the same pros & cons.
+
+// **Available on Elastic Cloud**: ❌
+
+// This supports all of the same outputs as binary
+// see https://github.com/elastic/apm-server/issues/10467
+// **Supported outputs**:
+
+// **Configuration method**: YAML
+
+// image::./images/ea-ov.png[APM Server ea overview]
+
+// @simitt's notes for how to include EA-managed in the decision tree:
+// ****
+// If we generally describe Standalone Elastic Agent managed APM Server then we should also add it to this diagram:
+// Do you want to use other integrations?
+// -> yes: Would you like to use the comfort of Fleet UI based management? -> yes: Fleet managed APM Server; -> no: Standalone Elastic Agent managed APM Server
+// -> no: What is your prefered way of configuration? -> yaml: APM Server binary; -> Kibana UI: Fleet managed APM Server
+// ****
+
+// Components required:
+
+// [options="header"]
+// |====
+// | Installation method                         | APM Server | Elastic Agent | Fleet Server
+// | APM Server binary                           | ✔️          |               |
+// // | Standalone Elastic Agent-managed APM Server | ✔️          | ✔️             |
+// | Fleet-managed APM Server                    | ✔️          | ✔️             | ✔️
+// |====
+
+[float]
+=== Help me decide
+
+Use the decision tree below to help determine which method of configuring and running the APM Server is best for your use case.
+
+// TODO: UNCOMMENT THIS
+[subs=attributes+]
+// include::./diagrams/apm-decision-tree.asciidoc[APM Server decision tree]
+
+
+=== APM Server binary
+
+// *******************************************************
+// STEP 0
+// *******************************************************
+
+==== Prerequistes
+
+First, see the https://www.elastic.co/support/matrix[Elastic Support Matrix] for information about supported operating systems and product compatibility.
 
 You'll need:
 
@@ -41,20 +164,13 @@ image::images/apm-architecture-diy.png[Install Elastic APM yourself]
 
 See {stack-ref}/installing-elastic-stack.html[Installing the {stack}]
 for more information about installing these products.
-After installing the {stack}, read the following topics to learn how to install,
-configure, and start APM Server:
-
-* <<installing>>
-* <<apm-server-configuration>>
-* <<apm-server-starting>>
-* <<next-steps>>
 
 // *******************************************************
 // STEP 1
 // *******************************************************
 
 [[installing]]
-=== Step 1: Install
+==== Step 1: Install
 
 NOTE: *Before you begin*: If you haven't installed the {stack}, do that now.
 See {stack-ref}/installing-elastic-stack.html[Learn how to install the
@@ -189,16 +305,16 @@ See <<running-on-docker, Running on Docker>> for deploying Docker containers.
 // *******************************************************
 
 [[apm-server-configuration]]
-=== Step 2: Set up and configure
+==== Step 2: Set up and configure
 
 [float]
-==== {ecloud}
+===== {ecloud}
 
 If you're running APM in Elastic cloud,
 see {cloud}/ec-manage-apm-settings.html[Add APM user settings] for information on how to configure Elastic APM.
 
 [float]
-==== Self installation
+===== Self installation
 
 // This content is reused in the upgrading guide
 // tag::why-apm-integration[]
@@ -207,7 +323,7 @@ Starting in version 8.0.0, {fleet} uses the APM integration to set up and manage
 // end::why-apm-integration[]
 
 [float]
-===== Install the APM integration
+====== Install the APM integration
 
 // This content is reused in the upgrading guide
 // tag::install-apm-integration[]
@@ -224,7 +340,7 @@ See {fleet-guide}/air-gapped.html[Air-gapped environments] for more information.
 // end::install-apm-integration[]
 
 [float]
-===== Configure APM
+====== Configure APM
 
 Configure APM by editing the `apm-server.yml` configuration file.
 The location of this file varies by platform--see the <<directory-layout>> for help locating it.
@@ -238,15 +354,13 @@ apm-server:
 output.elasticsearch:
   hosts: ["localhost:9200"] <2>
   username: "elastic" <3>
-  password: "changeme" <4>
+  password: "changeme"
 ----
 <1> The `host:port` APM Server listens on.
 <2> The {es} `host:port` to connect to.
 <3> This example uses basic authentication.
 The user provided here needs the privileges required to publish events to {es}.
 To create a dedicated user for this role, see <<privileges-to-publish-events>>.
-<4> We've hard-coded the password here,
-but you should store sensitive values in the <<keystore,secrets keystore>>.
 
 All available configuration options are outlined in
 {apm-server-ref-v}/configuring-howto-apm-server.html[configuring APM Server].
@@ -256,7 +370,7 @@ All available configuration options are outlined in
 // *******************************************************
 
 [[apm-server-starting]]
-=== Step 3: Start
+==== Step 3: Start
 
 In a production environment, you would put APM Server on its own machines,
 similar to how you run {es}.
@@ -285,7 +399,7 @@ You can change the defaults in `apm-server.yml` or by supplying a different addr
 
 [float]
 [[running-deb-rpm]]
-==== Debian Package / RPM
+===== Debian Package / RPM
 
 For Debian package and RPM installations, we recommend the `apm-server` process runs as a non-root user.
 Therefore, these installation methods create an `apm-server` user which you can use to start the process.
@@ -307,7 +421,7 @@ See the <<_deb_and_rpm,deb & rpm default paths>> for a full directory layout.
 // *******************************************************
 
 [[next-steps]]
-=== Step 4: Next steps
+==== Step 4: Next steps
 
 // Use a tagged region to pull APM Agent information from the APM Overview
 If you haven't already, you can now install APM Agents in your services!
@@ -332,3 +446,31 @@ include::{libbeat-dir}/repositories.asciidoc[]
 
 // Shared docker
 include::{libbeat-dir}/shared-docker.asciidoc[]
+
+
+=== Fleet-managed APM Server
+
+// TODO:
+// These steps won't necessarily be on separate pages in the final version.
+
+==== Prerequisites
+
+Install {es} + {kib}
+
+==== Step 1: Set up Fleet
+
+Install {agent} and enable {fleet-server}.
+
+==== Step 2: Configure the APM integration
+
+Add the APM integration to your {agent} (this runs the APM Server binary!)
+
+==== Step 3: Install APM agents
+
+...
+
+==== Step 4: View your data
+
+...
+
+==== Step 5: Next steps
