--- a/docs/legacy/copied-from-beats/docs/shared-ssl-config.asciidoc
+++ b/docs/legacy/copied-from-beats/docs/shared-ssl-config.asciidoc
@@ -232,8 +232,8 @@ supports SSL.
 [[client-certificate-authorities]]
 ==== `certificate_authorities`
 
-The list of root certificates for verifications is required. If `certificate_authorities` is empty or not set, the
-system keystore is used. If `certificate_authorities` is self-signed, the host system
+The list of root certificates for verifications is required.
+If `certificate_authorities` is self-signed, the host system
 needs to trust that CA cert as well.
 
 By default you can specify a list of files that +{beatname_lc}+ will read, but you
