--- a/docs/legacy/getting-started-apm-server.asciidoc
+++ b/docs/legacy/getting-started-apm-server.asciidoc
@@ -363,7 +363,7 @@ The user provided here needs the privileges required to publish events to {es}.
 To create a dedicated user for this role, see <<privileges-to-publish-events>>.
 
 All available configuration options are outlined in
-{apm-server-ref-v}/configuring-howto-apm-server.html[configuring APM Server].
+{apm-guide-ref}/configuring-howto-apm-server.html[configuring APM Server].
 
 // *******************************************************
 // STEP 3
