Revert "add advanced setup"
This reverts commit 58242abb6753c08b04280dfdefafc213a42b7531.

--- a/docs/legacy/setting-up-and-running.asciidoc
+++ b/docs/legacy/setting-up-and-running.asciidoc
@@ -1,9 +1,9 @@
 
 [[setting-up-and-running]]
-== APM Server advanced setup
+== Set up APM Server
 
 ++++
-<titleabbrev>Advanced setup</titleabbrev>
+<titleabbrev>Set up</titleabbrev>
 ++++
 
 Before reading this section, see the <<getting-started-apm-server,getting started documentation>>
