Revert "remove keystore"
This reverts commit a9c25477b82015ffb1c12124ac08f1c1b65ccc5c.

--- a/docs/legacy/copied-from-beats/docs/https.asciidoc
+++ b/docs/legacy/copied-from-beats/docs/https.asciidoc
@@ -32,10 +32,18 @@ For example:
 output.elasticsearch:
   hosts: ["https://myEShost:9200"]
   username: "{beat_default_index_prefix}_writer" <1>
-  password: "{pwd}"
+  password: "{pwd}" <2>
 ----------------------------------------------------------------------
 <1> This user needs the privileges required to publish events to {es}.
 To create a user like this, see <<privileges-to-publish-events>>.
+<2> This example shows a hard-coded password, but you should store sensitive
+values
+ifndef::serverless[]
+in the <<keystore,secrets keystore>>.
+endif::[]
+ifdef::serverless[]
+in environment variables.
+endif::[]
 --
 
 * To use token-based *API key authentication*, specify the `api_key` under `output.elasticsearch`.
@@ -128,9 +136,17 @@ For example, specify a unique username and password to connect to {kib} like thi
 setup.kibana:
   host: "mykibanahost:5601"
   username: "{beat_default_index_prefix}_kib_setup" <1>
-  password: "{pwd}"
+  password: "{pwd}" <2>
 ----
 <1> This user needs privileges required to set up dashboards
+<2> This example shows a hard-coded password, but you should store sensitive
+values
+ifndef::serverless[]
+in the <<keystore,secrets keystore>>.
+endif::[]
+ifdef::serverless[]
+in environment variables.
+endif::[]
 endif::no_dashboards[]
 --
 
