finish advanced setup

--- a/docs/legacy/setting-up-and-running.asciidoc
+++ b/docs/legacy/setting-up-and-running.asciidoc
@@ -20,6 +20,8 @@ include::{libbeat-dir}/shared-directory-layout.asciidoc[]
 
 include::{libbeat-dir}/command-reference.asciidoc[]
 
+include::./data-ingestion.asciidoc[]
+
 include::./high-availability.asciidoc[]
 
 include::{libbeat-dir}/shared-systemd.asciidoc[]
