--- a/docs/legacy/data-ingestion.asciidoc
+++ b/docs/legacy/data-ingestion.asciidoc
@@ -1,18 +1,11 @@
 [[tune-data-ingestion]]
-== Tune data ingestion
+=== Tune data ingestion
 
 This section explains how to adapt data ingestion according to your needs.
 
-* <<tune-apm-server>>
-* <<tune-es>>
-
-
+[float]
 [[tune-apm-server]]
 === Tune APM Server
-
-++++
-<titleabbrev>APM Server</titleabbrev>
-++++
 
 * <<add-apm-server-instances>>
 * <<reduce-payload-size>>
@@ -20,15 +13,22 @@ This section explains how to adapt data ingestion according to your needs.
 
 [[add-apm-server-instances]]
 [float]
-==== Add APM Server instances
+==== Add APM Server or {agent} instances
 
 If the APM Server cannot process data quickly enough,
 you will see request timeouts.
-
 One way to solve this problem is to increase processing power.
-This can be done by either migrating your APM Server to a more powerful machine
+
+**APM Server Binary users**
+
+Increase processing power by either migrating your APM Server to a more powerful machine
 or adding more APM Server instances.
 Having several instances will also increase <<high-availability, availability>>.
+
+**Fleet-managed users**
+
+Increase processing power by either migrating your {agent} to a more powerful machine
+or adding more {agent} instances.
 
 [[reduce-payload-size]]
 [float]
@@ -49,18 +49,20 @@ Read more in the {apm-agents-ref}/index.html[agents documentation].
 Agents make use of long running requests and flush as many events over a single request as possible.
 Thus, the rate limiter for anonymous authentication is bound to the number of _events_ sent per second, per IP.
 
-If the event rate limit is hit while events on an established request are sent, the request is not immediately terminated. The intake of events is only throttled to <<config-auth-anon-event-limit,`rate_limit.event_limit`>>, which means that events are queued and processed slower. Only when the allowed buffer queue is also full, does the request get terminated with a `429 - rate limit exceeded` HTTP response. If an agent tries to establish a new request, but the rate limit is already hit, a `429` will be sent immediately.
+If the event rate limit is hit while events on an established request are sent, the request is not immediately terminated. The intake of events is only throttled to anonymous event rate limit, which means that events are queued and processed slower. Only when the allowed buffer queue is also full, does the request get terminated with a `429 - rate limit exceeded` HTTP response. If an agent tries to establish a new request, but the rate limit is already hit, a `429` will be sent immediately.
 
-Increasing the <<config-auth-anon-event-limit,`rate_limit.event_limit`>> default value will help avoid `rate limit exceeded` errors.
+Increasing the default value for the following configuration variable will help avoid `rate limit exceeded` errors:
 
-[[tune-es]]
+|====
+| APM Server binary | <<config-auth-anon-event-limit,`rate_limit.event_limit`>>
+| Fleet-managed     | `Anonymous Event rate limit (event limit)`
+|====
+
+[float]
+[[apm-tune-elasticsearch]]
 === Tune {es}
 
-++++
-<titleabbrev>{es}</titleabbrev>
-++++
-
-The {es} reference provides insight on tuning {es}.
+The {es} Reference provides insight on tuning {es}.
 
 {ref}/tune-for-indexing-speed.html[Tune for indexing speed] provides information on:
 
