--- a/docs/legacy/troubleshooting.asciidoc
+++ b/docs/legacy/troubleshooting.asciidoc
@@ -12,7 +12,7 @@ Other sections in the documentation may also be helpful:
 
 * <<storage-guide, Storage and sizing guide>>
 * <<tune-apm-server, Tune APM Server>>
-* <<tune-es, Tune {es}>>
+* <<apm-tune-elasticsearch, Tune {es}>>
 * {apm-overview-ref-v}/agent-server-compatibility.html[Agent/Server compatibility matrix]
 
 If your issue is potentially related to other components of the APM ecosystem,
