--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -14,6 +14,7 @@ https://github.com/elastic/apm-server/compare/8.8\...main[View commits]
 
 [float]
 ==== Intake API Changes
+- Span events now default to having a representative count of 1, if no `sample_rate` field is sent by the agent {pull}10792[10792]
 
 [float]
 ==== Added
