--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -19,3 +19,4 @@ https://github.com/elastic/apm-server/compare/8.8\...main[View commits]
 [float]
 ==== Added
 - Span events now carry `host` and `service.version` attributes. {pull}10697[10697]
+- Accept more options in agentcfg ES config; Reliably use `agent.config.elasticsearch` and `rum.source_mapping.elasticsearch` credentials when merging with `output.elasticsearch` credentials {pull}10783[10783]
