--- a/docs/configure/instrumentation.asciidoc
+++ b/docs/configure/instrumentation.asciidoc
@@ -5,7 +5,7 @@
 <titleabbrev>Instrumentation</titleabbrev>
 ++++
 
-NOTE: Instrumentation of APM Server is not supported for Fleet-managed APM.
+NOTE: Instrumentation of APM Server is not yet supported for Fleet-managed APM.
 
 APM Server uses the Elastic APM Go Agent to instrument its publishing pipeline.
 To gain insight into the performance of {beatname_uc}, you can enable this instrumentation and send trace data to APM Server.
