--- a/docs/legacy/data-ingestion.asciidoc
+++ b/docs/legacy/data-ingestion.asciidoc
@@ -19,16 +19,9 @@ If the APM Server cannot process data quickly enough,
 you will see request timeouts.
 One way to solve this problem is to increase processing power.
 
-**APM Server Binary users**
-
-Increase processing power by either migrating your APM Server to a more powerful machine
-or adding more APM Server instances.
+Increase processing power by either migrating to a more powerful machine
+or adding more APM Server/Elastic Agent instances.
 Having several instances will also increase <<high-availability, availability>>.
-
-**Fleet-managed users**
-
-Increase processing power by either migrating your {agent} to a more powerful machine
-or adding more {agent} instances.
 
 [[reduce-payload-size]]
 [float]
