--- a/docs/legacy/high-availability.asciidoc
+++ b/docs/legacy/high-availability.asciidoc
@@ -1,9 +1,6 @@
 [[high-availability]]
 === High Availability
 
-IMPORTANT: These commands only apply to the APM Server binary installation method.
-Fleet-managed users should see {fleet-guide}/fleet-agent-proxy-support.html[Fleet/Agent proxy support].
-
 To achieve high availability
 you can place multiple instances of APM Server behind a regular HTTP load balancer,
 for example HAProxy or Nginx.
@@ -19,3 +16,5 @@ but instead leverages an HTTP request timeout to act as back-pressure.
 
 If {es} goes down, the APM Server will eventually deny incoming requests.
 Both the APM Server and {apm-agent}(s) will issue logs accordingly.
+
+TIP: Fleet-managed APM Server users might also be interested in {fleet-guide}/fleet-agent-proxy-support.html[Fleet/Agent proxy support].
